[tool.poetry]
name = "pingdat"
version = "1.6.1"
description = "A simple ping exporter for Prometheus metrics."
authors = ["jheddings <jheddings@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
click = "^8.2.1"
prometheus-client = "^0.22.1"
pydantic = "^2.11.7"
pyyaml = "^6.0.2"
ping3 = "^5.1.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
GitPython = "^3.1.45"
pytest = "^8.4.2"
coverage = "^7.10.6"
ruff = "^0.12.11"

[tool.poetry.scripts]
pingdat = "pingdat.__main__:main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "network: tests that require an active network",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
