[project]
name = "pingdat"
version = "1.6.3"
description = "A simple ping exporter for Prometheus metrics."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.32.5,<3",
    "click>=8.3.1,<9",
    "prometheus-client>=0.23.1,<0.24",
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0.3,<7",
    "ping3>=5.1.5,<6",
]

[project.scripts]
pingdat = "pingdat.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0,<5",
    "GitPython>=3.1.45,<4",
    "pytest>=9.0.1,<10",
    "coverage>=7.12.0,<8",
    "ruff>=0.14.7,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pingdat"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "network: tests that require an active network",
]
