[project]
name = "pingdat"
version = "1.6.4"
description = "A simple ping exporter for Prometheus metrics."
authors = [{ name = "jheddings", email = "jheddings@gmail.com" }]
requires-python = ">=3.12, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.34.2,<3",
    "click>=8.4.2,<9",
    "prometheus-client>=0.25.0,<0.26",
    "pydantic>=2.13.4,<3",
    "pyyaml>=6.0.3,<7",
    "ping3>=5.1.5,<6",
]

[project.scripts]
pingdat = "pingdat.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0,<5",
    "GitPython>=3.1.50,<4",
    "pytest>=9.1.1,<10",
    "coverage>=7.15.0,<8",
    "pyright>=1.1.411",
    "ruff>=0.15.20,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pingdat"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "RET", # flake8-return
    "N",   # pep8-naming
    "ERA", # eradicate
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "network: tests that require an active network",
]
